--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "timbre",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "author": "KJ Shanks <kyle.j.shanks@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -13,13 +13,13 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "react-dom": "^17.0.1",
     "webpack": "^5.21.1",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "styled-components": "^5.2.1"
   }
 }
